--- a/BTCPayServer/Views/Home/Home.cshtml
+++ b/BTCPayServer/Views/Home/Home.cshtml
@@ -7,9 +7,9 @@
 <header class="masthead">
     <div class="header-content">
         <div class="header-content-inner text-white">
-            <h1>Welcome to BTCPay Server</h1>
+            <h1>Welcome to Bitpayer Server</h1>
             <hr />
-            <p>BTCPay Server is a free and open source server for merchants wanting to accept Bitcoin for their business.</p>
+            <p>BTCPay Server is a free and open source server for merchants wanting to accept bitcoin for their business.</p>
             <a style="background-color: #fff;color: #222;display:inline-block;text-align: center;white-space: nowrap;vertical-align: middle;user-select: none;line-height: 1.25;font-size: 1rem;text-decoration:none;font-weight: 700;    text-transform: uppercase;border: none;border-radius: 300px;padding: 15px 30px;" href="https://btcpayserver.org" target="_blank">Official website</a>
         </div>
     </div>
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">A Payment Server for Bitcoin</h2>
+                <h2 class="section-heading">A Payment Server for bitcoin</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -37,7 +37,7 @@
                 <div class="service-box">
                     <img src="~/img/qr-logo.png" />
                     <h3 class="text-dark">Easy</h3>
-                    <p class="text-muted">A user-friendly Bitcoin checkout page for your customers.</p>
+                    <p class="text-muted">A user-friendly bitcoin checkout page for your customers.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
